@@ -130,6 +130,11 @@ table .last{padding-right:0;}
 .push-4{margin-right:-160px;}
 .push-5{margin-right:-200px;}
 .push-0,.push-1,.push-2,.push-3,.push-4,.push-5{float:right;margin-bottom:1.5em;margin-left:18px;}
+.raise-1{margin-top:-1.5em;}
+.raise-2{margin-top:-3em;}
+.raise-3{margin-top:-4.5em;}
+.raise-4{margin-top:-6em;}
+.raise-5{margin-top:-7.5em;}
 .box{margin-bottom:1.5em;background:#eee;padding:1.5em;}
 hr{background:#ddd;color:#ddd;clear:both;float:none;width:100%;height:.1em;border:none;margin:0 0 1.4em;}
 hr.space{background:#fff;color:#fff;}
